`add google analytic tag`

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZ5CPZH24N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GZ5CPZH24N');
+    </script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +20,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best house cleaning service | Affordable cleaning services.</title>
     <style>
-   
       .home-header-nav {
         position: relative;
         width: 100%;
@@ -27,8 +36,6 @@
         position: relative;
         overflow: hidden;
       }
-
-     
     </style>
   </head>
   <body>
