--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
       gtag('config', 'G-GZ5CPZH24N');
     </script>
+ <!-- clarity  -->
+ <script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "t7ilacub6k");
+</script>
 
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
@@ -37,6 +45,9 @@
         overflow: hidden;
       }
     </style>
+     <!--  Google Maps Script  -->
+     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAk4WgZpl2DuYxnfgYLCXEQKvVLK3hJ7S0&libraries=places" async defer></script>
+     
   </head>
   <body>
     <div id="root"></div>
