`add schema in index head`

--- a/index.html
+++ b/index.html
@@ -19,6 +19,69 @@
   })(window, document, "clarity", "script", "t7ilacub6k");
 </script>
 
+
+  <!-- local business schema  -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "v3care",
+      "image": "https://v3care.in/assets/v3logo-Bye1VR8z.png",
+      "@id": "",
+      "url": "https://v3care.in/",
+      "telephone": "98807 78585",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "286 15th A Cross, 7th Main Rd, Sector 6, HSR Layout, Bengaluru, Karnataka 560102",
+        "addressLocality": "Bengaluru",
+        "postalCode": "560102",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 12.9134731,
+        "longitude": 77.633077
+      }  
+    }
+    </script>
+
+
+    <!-- organization  schema  -->
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "v3care",
+        "alternateName": "v3care",
+        "url": "https://v3care.in/",
+        "logo": "https://v3care.in/assets/v3logo-Bye1VR8z.png",
+        "sameAs": [
+          "https://www.facebook.com/v3care",
+          "https://x.com/care_v3",
+          "https://www.instagram.com/v3care/",
+          "https://www.linkedin.com/in/v3-care-15135119b/",
+          "https://www.youtube.com/channel/UC3eZ5BXlhuQk_OZ6zXXgW2w"
+        ]
+      }
+      </script>
+
+      <!-- website schema  -->
+
+      <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/",
+          "@type": "WebSite",
+          "name": "V3 Care",
+          "url": "https://v3care.in/",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "{search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        }
+        </script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
