`add meta tag of geo location in index.html as per the client `

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;700&display=swap"></noscript>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best house cleaning service | Affordable cleaning services.</title>
+    <meta name="DC.title" content="https://v3care.in/" />
+<meta name="geo.region" content="IN-KA" />
+<meta name="geo.placename" content="Bengaluru" />
+<meta name="geo.position" content="12.914764;77.633453" />
+<meta name="ICBM" content="12.914764, 77.633453" />
     <style>
       .home-header-nav {
         position: relative;
